# ofdm_txrx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  do_compile_3ds.sh  do_compile_pc.sh
crc32/: CMakeLists.txt
crc32/include/: crc32.h
crc32/src/: crc32.c
examples/: main_3ds.c  main_pc.c
include/: fft.h  ofdm.h
source/: fft.c  fft_armv6.S  fft_armv6_vec2.S  main.c  ofdm.c
